ocaml (4.05.0-2) UNRELEASED; urgency=medium

  * Update conditional-install rules for easier maintenance. This fixes FTBFS
    on arm64 and s390x where libasmrunp.a is not available.

 -- Ximin Luo <infinity0@debian.org>  Fri, 21 Jul 2017 15:59:19 +0200

ocaml (4.05.0-1) experimental; urgency=medium

  * New upstream release.
  * Update to latest Standards-Version; no changes required.

 -- Ximin Luo <infinity0@debian.org>  Mon, 17 Jul 2017 16:11:47 +0200

ocaml (4.04.0-2) experimental; urgency=medium

  * Fix the build on non-opt+64 arches for raw_spacetime.

 -- Ximin Luo <infinity0@debian.org>  Sat, 04 Mar 2017 13:13:34 +0100

ocaml (4.04.0-1) experimental; urgency=medium

  [ Mehdi Dogguy ]
  * Use secure and canonical URIs for Vcs-* fields

  [ Ximin Luo ]
  * New upstream release.
  * Merge ocaml-native-compilers into ocaml-nox.

 -- Ximin Luo <infinity0@debian.org>  Fri, 03 Mar 2017 23:57:44 +0100

ocaml (4.03.0-5) experimental; urgency=medium

  * Fix variable substitution in Makefile syntax.

 -- Ximin Luo <infinity0@debian.org>  Thu, 03 Nov 2016 01:39:42 +0100

ocaml (4.03.0-4) experimental; urgency=medium

  * Add a versioned Provides so we can have versioned Build-Depends
    on ocaml-best-compilers in other packages.

 -- Ximin Luo <infinity0@debian.org>  Wed, 02 Nov 2016 15:26:44 +0100

ocaml (4.03.0-3) experimental; urgency=medium

  * Default to PIC on arm, to fix failing armhf tests.

 -- Ximin Luo <infinity0@debian.org>  Wed, 02 Nov 2016 13:09:29 +0100

ocaml (4.03.0-2) experimental; urgency=medium

  * Add native compilers for ppc64, ppc64el, s390x.
  * Skip native tests on bytecode-only systems.

 -- Ximin Luo <infinity0@debian.org>  Fri, 28 Oct 2016 02:13:18 +0200

ocaml (4.03.0-1) experimental; urgency=medium

  * Team upload.
  * New upstream release.

 -- Ximin Luo <infinity0@debian.org>  Thu, 20 Oct 2016 17:43:52 +0200

ocaml (4.02.3-7) unstable; urgency=medium

  * d/rules: split install-stamp target into -arch and -indep, to allow