@@ -2,6 +2,7 @@ ocaml (4.05.0-2) UNRELEASED; urgency=medium
 
   * Update conditional-install rules for easier maintenance. This fixes FTBFS
     on arm64 and s390x where libasmrunp.a is not available.
+  * Disable failing dup3/pipe2-related tests on kfreebsd-*.
 
  -- Ximin Luo <infinity0@debian.org>  Fri, 21 Jul 2017 15:59:19 +0200
 
